compiler/toc-hir-lowering/tests/snapshots/lowering__lower_real_literal-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := 1."
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..19): "<root>"@(dummy)
      StmtBody@(src/main.t:0..19): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..19)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..19): Real(1.0)
