compiler/toc-hir-lowering/tests/snapshots/lowering__lower_real_literal-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ : int _ := 1e-"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..20): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..20): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        Assign@(FileId(1), 12..20)
          Name@(FileId(1), 12..13): "_"@(FileId(1), 4..5)
          Literal@(FileId(1), 17..20): Real(0.0)
error in file FileId(1) at 17..20: invalid real literal
| error in file FileId(1) for 17..20: missing exponent digits

