compiler/toc-hir-lowering/tests/snapshots/lowering__lower_scoping_inner_use_outer_use.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "begin a := b end a := b"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..23): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..23): []
        Block@(FileId(1), 0..16): Normal
          Assign@(FileId(1), 6..12)
            Name@(FileId(1), 6..7): "a"@(FileId(1), 6..7), undeclared
            Name@(FileId(1), 11..12): "b"@(FileId(1), 11..12), undeclared
        Assign@(FileId(1), 17..23)
          Name@(FileId(1), 17..18): "a"@(FileId(1), 17..18), undeclared
          Name@(FileId(1), 22..23): "b"@(FileId(1), 22..23), undeclared
error at (FileId(1), 6..7): `a` is undeclared
| error for (FileId(1), 6..7): no definitions of `a` are in scope
error at (FileId(1), 11..12): `b` is undeclared
| error for (FileId(1), 11..12): no definitions of `b` are in scope

