compiler/toc-hir-lowering/tests/snapshots/lowering__lower_scoping_redeclare_over_undef.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "a := a const a := 1"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..19): "<root>"@(dummy)
      StmtBody@(src/main.t:0..19): []
        Assign@(src/main.t:0..6)
          Name@(src/main.t:0..1): "a"@(src/main.t:0..1), undeclared
          Name@(src/main.t:5..6): "a"@(src/main.t:5..6), undeclared
        StmtItem@(src/main.t:7..19): ItemId(0)
          ConstVar@(src/main.t:7..19): const "a"@(src/main.t:13..14)
            ExprBody@(src/main.t:18..19)
              Literal@(src/main.t:18..19): Integer(1)
error at src/main.t:0..1: `a` is undeclared
| error for src/main.t:0..1: no definitions of `a` are in scope
