compiler/toc-hir-lowering/tests/snapshots/lowering__lower_self_expr.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "const a := self"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..15): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..15): []
        StmtItem@(FileId(1), 0..15): ItemId(0)
          ConstVar@(FileId(1), 0..15): const "a"@(FileId(1), 6..7)
            ExprBody@(FileId(1), 11..15)
error in file FileId(1) at 11..15: unsupported expression
| error in file FileId(1) for 11..15: this expression is not supported yet
error in file FileId(1) at 11..15: cannot use `self` here
| error in file FileId(1) for 11..15: `self` is only allowed inside of class subprograms

